# kege-by-danshaders

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  Doxyfile  INSTALL-win-ru.md  LICENSE  README.md  docker-compose.yml
api/: .clang-format  CMakeLists.txt
api/include/: KEGE.in.h  class-behavior.h  config.h  fcgx.h  logging.h  routes.h  stacktrace.h  stdafx.h
api/include/async/: coro.h  curl.h  event-loop.h  future.h  libev-event-loop.h  mutex.h  pq.h  socket.h  stackful.h  websocket.h
api/include/async/detail/: coro.impl.h  curl.impl.h  event-loop.impl.h  future.impl.h  libev-event-loop.impl.h  mutex.impl.h  pq.impl.h  socket.impl.h  stackful.impl.h  websocket.impl.h
api/include/routes/: grading.h  jobs.h  session.h
api/include/utils/: api.h  common.h  crypto.h  filter.h  html.h
api/include/utils/detail/: api.impl.h
api/routes/: _basic.cc  _wrap.cc  attachment.cc  contestant.cc  contestant.sql  groups.cc  groups.sql  jobs.cc  kims.cc  kims.sql  login.cc  standings.cc  standings.sql  task-types.cc  tasks.cc  test.cc  user.cc  users.cc  users.sql
api/src/: config.cc  fcgx.cc  logging.cc  main.cc  routes.cc  stacktrace-specific.cc  stacktrace.cc  unwind-cxx.h
api/src/async/: coro.cc  curl.cc  event-loop.cc  future.cc  libev-event-loop.cc  mutex.cc  pq.cc  socket.cc  stackful.cc  websocket.cc  websocket_reason_decode.cc
api/src/routes/: grading.cc  session.cc
api/src/utils/: api.cc  common.cc  crypto.cc  filter.cc  html.cc
config/: config.json  docker-compose.yml
config/nginx/: nginx.conf
config/postgresql/: Dockerfile  db.sql
docs/: index.html
meta/: api.dockerfile  config.json  dev.py  docker-compose.yml  nginx-devel.conf  nginx-prod.conf  nginx.dockerfile
meta/builder/: Dockerfile
meta/cmake/: CMakeLists.txt  common_compile_options.cmake
meta/nginx/: nginx.conf
meta/postgres/: Dockerfile  db.sql  init-script.sh
proto/: api.proto  contestant.proto  diff.proto  groups.proto  jobs.proto  kims.proto  standings.proto  task-types.proto  tasks.proto  user.proto  users.proto
tools/diff-proto/: CMakeLists.txt
tools/diff-proto/src/: errors.h  fields-id.cc  fields-pos.cc  fields-scalar.cc  fields-set.cc  fields-unwired.cc  fields.h  file-context.h  main.cc  options.cc  options.h  stdafx.h  utils.h
tools/sql-typer/: .clang-format  CMakeLists.txt  main.cc
ui/: .eslintrc.json  .prettierrc.json  build.js  build.mjs  index.html  package-lock.json  package.json  tsconfig.json
ui/css/: buttons.css  generic.css  layout.css  main.css  tables.css
ui/css/components/: answer-table.css  button-icon.css  checkbox.css  file-input.css  file-select.css  header.css  kim-header.css  notice.css  tab-select.css  tab.css  text-editor.css
ui/css/pages/: login.css  solve.css
ui/css/pages/admin/: standings.css
ui/css/pages/admin/tasks/: list.css
ui/css/pages/kim/: list.css
ui/src/: admin.ts  app.ts
ui/src/components/: answer-table.tsx  button-icon.tsx  checkbox.tsx  component.ts  file-select.tsx  header.tsx  kim-header.tsx  lists.ts  notice.ts  notice.tsx  tab-select.tsx  task-select.tsx  text-editor.tsx
ui/src/pages/: 404.tsx  common.ts  list.tsx  login.ts  login.tsx  main.ts  main.tsx  solve.tsx  watch.tsx
ui/src/pages/admin/: jobs-list.tsx  standings.tsx  tasks-edit.tsx  tasks-new.tsx  tasks.tsx  users.tsx
ui/src/pages/admin/jobs/: list.tsx
ui/src/pages/admin/kims/: edit.tsx  list.tsx
ui/src/pages/admin/tasks/: edit.tsx  list.tsx
ui/src/utils/: assert.ts  bidirectional-map.ts  common.ts  diff.ts  editor-transforms.ts  events.ts  future.ts  jsx.ts  queue.ts  requests.ts  router.ts  selection-controller.ts  sync-controller.ts  traverse.ts
ui/static/: index.html
ui/static/admin/: pages.html
ui/tools/: build.js
ui/tools/diff-proto/: .clang-format  CMakeLists.txt  main.cc
ui/tools/diff-proto/src/: errors.h  fields-scalar.cc  fields-unwired.cc  fields.h  file-context.h  main.cc  options.cc  options.h  stdafx.h
